clang/test/Ripple/ripple-parallel/thread-vector-expansion-missing-thread-header.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py UTC_ARGS: --version 6
// REQUIRES: target=hexagon{{.*}}
// RUN: %clang -ffreestanding -S -Xclang -disable-llvm-passes -emit-llvm -fenable-ripple %s -DUSING_PRAGMA=1 2> %t.pragma.err; FileCheck %s --check-prefixes=CHECK,PRAGMACHECK --input-file=%t.pragma.err
// RUN: %clang -ffreestanding -S -Xclang -disable-llvm-passes -emit-llvm -fenable-ripple %s 2> %t.err; FileCheck %s --input-file %t.err

#include <ripple.h>

void check(int Chunk, int64_t N, int32_t start, int64_t end, float x[restrict N],
           float y[restrict N], float xpy[restrict N]) {
  ripple_thd_block_t ThreadBlockT = ripple_thd_init(0, NULL);
  ripple_block_t BSV = ripple_set_block_shape(0, 4);
#ifdef USING_PRAGMA
  #pragma ripple parallel Block(ThreadBlockT) Dims(0) ThreadChunk(Chunk)
  #pragma ripple parallel Block(BSV) Dims(0)
#else
  ripple_parallel_thread_chunk(BST, Chunk, 0);
  ripple_parallel(BSV, 0);
#endif
  for (int i = start; i < end; ++i)
    xpy[i] = x[i] + y[i];
  ripple_thd_exit(ThreadBlockT);
}

// CHECK:      thread-vector-expansion-missing-thread-header.c:10:3: error: unknown type name 'ripple_thd_block_t'; did you mean 'ripple_block_t'?
// CHECK-NEXT:    10 |   ripple_thd_block_t ThreadBlockT = ripple_thd_init(0, NULL);
// CHECK-NEXT:       |   ^~~~~~~~~~~~~~~~~~
// CHECK-NEXT:       |   ripple_block_t
// PRAGMACHECK:      thread-vector-expansion-missing-thread-header.c:13:3: error: 'ripple_thd_id' function declaration not found; include <ripple/thread.h>
// PRAGMACHECK-NEXT:    13 |   #pragma ripple parallel Block(ThreadBlockT) Dims(0) ThreadChunk(Chunk)
// PRAGMACHECK-NEXT:       |   ^